--- a/src/views/discover.ejs
+++ b/src/views/discover.ejs
@@ -1,56 +1,21 @@
-<!DOCTYPE html>
-<html>
-
-  <%- include('./includes/head', { title: 'Discover'}) %>
-
-  <body>
-
-    <!-- TODO: Transfer this page structure to index.html-->
-    <%- include('header') %>
-
-    <!-- Minimize navbar by adding: class="minimized" -->
-    <%- include('./includes/navbar'); %>
-
-    <main>
-      <section id="discover">
-        <!-- This setup can be expanded with more discover areas
+<section id="discover">
+  <!-- This setup can be expanded with more discover areas
              Eg: hot, new, popular, for you, etc -->
-        <article class="discover_section" id="general">
-            <h1>Discover collections</h1>
-            <ul class="discover_lineup">
-                <!-- TODO: Make card generation dynamic
+  <article class="discover_section" id="general">
+    <h1>Discover collections</h1>
+    <ul class="discover_lineup">
+      <!-- TODO: Make card generation dynamic
                      Eg: collections.forEach( include('discover_item')) -->
-                <% let item1 = {"title": "Animal Pattern", "img": "/images/animal_pattern.jpg"} %>
-                <%- include('includes/discover_item', item1) %>
-    
-                <% let item2 = {"title": "Abstract Art", "img": "/images/abstract_art.jpg"} %>
-                <%- include('includes/discover_item', item2) %>
-    
-                <% let item3 = {"title": "Dark", "img": "/images/dark_art.jpg"} %>
-                <%- include('includes/discover_item', item3) %>
-    
-                <% let item4 = {"title": "the irony", "img": "/images/irony.jpg"} %>
-                <%- include('includes/discover_item', item4) %>
-    
-                <% let item5 = {"title": "monke", "img": "/images/monke.jpg"} %>
-                <%- include('includes/discover_item', item5) %>
-    
-                <%- include('includes/discover_item', item1) %>
-                <%- include('includes/discover_item', item2) %>
-                <%- include('includes/discover_item', item3) %>
-                <%- include('includes/discover_item', item4) %>
-                <%- include('includes/discover_item', item5) %>
-    
-            </ul>
-        </article>
-    
-    </section>
-    
-    </main>
 
-    <%- include('./includes/aside_closed'); %>
+        <% let collection = [{"title": "Animal Pattern" , "img" : "/images/animal_pattern.jpg" }, {"title": "Abstract Art" , "img" : "/images/abstract_art.jpg" },{"title": "Dark" , "img" : "/images/dark_art.jpg" }] %>
+        <% collection.forEach( item => { %>
+          <li class="discover_item grow_hover shadow"><a href="/item/info">
+              <img src="<%= item.img %>" alt="<%= item.title %>">
+              <h1><%= item.title %></h1>
+          </a></li>
+        <% }) %>
 
-    <%- include('./includes/footer'); %>
+    </ul>
+  </article>
 
-  </body>
-</html>
+</section>
