--- a/src/views/friendlist.ejs
+++ b/src/views/friendlist.ejs
@@ -1,41 +1,31 @@
-<!DOCTYPE html>
-<html>
+<section id="friendlist">
 
-  <%- include('./includes/head', { title: 'Friendlist'}) %>
-  <body>
+      <section class="page" id="your_friends">
+          <h1>Your friends</h1>
+          <ul>
+              <% friends.forEach( friend => { %>
+                  <li class="friend">
+                    <section class="shadow" id="info">
+                        <div id="avatar"></div>
+                        <h1 id="name"><%= friend.name %></h1>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </section>
+                    <div id="buttons">
+                        <button class="grow_hover" id="profile">See Profile</button>
+                        <button class="grow_hover" id="message">Message</button>
+                        <button class="grow_hover" id="unfriend">Unfriend</button>
+                    </div>
+                </li>
 
-    <!-- TODO: Transfer this page structure to index.html-->
-    <%- include('header') %>
-
-    <!-- Minimize navbar by adding: class="minimized" -->
-    <%- include('./includes/navbar'); %>
-
-    <main>
-        <section id="friendlist">
-
-            <section class="page" id="your_friends">
-                <h1>Your friends</h1>
-                <ul>
-                    <% for(let i=1; i < 6; i++) { %>
-                        <% let friend={name: "Friend Number " + i} %>
-                        <%- include('includes/friendlist_item', friend) %>
-                    <% }; %>
-                </ul>
-            </section>
-        
-            <section id="bookmarks">
-                <% for(let i=0; i < 9; i++) { %>
-                    <% let style = 'grid-area: ' + (1 + 2*i) + ' / 1 / ' + (4 + 2*i) + ' / 2' %>
-                    <div style="<%= style %>" id="bm<%=i%>" class="bookmark"></div>
-                <% }; %>
-            </section>
-        
-        </section>
-    </main>
-
-    <%- include('./includes/aside_closed'); %>
-
-    <%- include('./includes/footer'); %>
-
-  </body>
-</html>
+              <% }); %>
+          </ul>
+      </section>
+  
+      <section id="bookmarks">
+          <% for(let i=0; i < 9; i++) { %>
+              <% let style = 'grid-area: ' + (1 + 2*i) + ' / 1 / ' + (4 + 2*i) + ' / 2' %>
+              <div style="<%= style %>" id="bm<%=i%>" class="bookmark"></div>
+          <% }; %>
+      </section>
+  
+  </section>
