Updated the remaining views

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,45 +1,36 @@
-<!DOCTYPE html>
-<html>
+<!-- Uncomment (one at a time!) to test different main views-->
+<!-- TODO add dashboard here -->
 
-  <%- include('./includes/head', { title: 'S.A.N.D'}) %>
-  <body>
+<section id="friendlist">
 
-    <!-- TODO: Transfer this page structure to index.html-->
-    <%- include('header') %>
+  <section class="page" id="your_friends">
+    <h1>Your friends</h1>
+    <ul>
+      <% friends.forEach( friend=> { %>
+        <li class="friend">
+          <section class="shadow" id="info">
+            <div id="avatar"></div>
+            <h1 id="name">
+              <%= friend.name %>
+            </h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </section>
+          <div id="buttons">
+            <button class="grow_hover" id="profile">See Profile</button>
+            <button class="grow_hover" id="message">Message</button>
+            <button class="grow_hover" id="unfriend">Unfriend</button>
+          </div>
+        </li>
 
-    <!-- Minimize navbar by adding: class="minimized" -->
-    <%- include('./includes/navbar'); %>
+        <% }); %>
+    </ul>
+  </section>
 
-    <main>
-      <!-- Uncomment (one at a time!) to test different main views-->
-      <!-- TODO add dashboard here -->
+  <section id="bookmarks">
+    <% for(let i=0; i < 9; i++) { %>
+      <% let style='grid-area: ' + (1 + 2*i) + ' / 1 / ' + (4 + 2*i) + ' / 2' %>
+        <div style="<%= style %>" id="bm<%=i%>" class="bookmark"></div>
+        <% }; %>
+  </section>
 
-      <section id="friendlist">
-
-        <section class="page" id="your_friends">
-            <h1>Your friends</h1>
-            <ul>
-                <% for(let i=1; i < 6; i++) { %>
-                    <% let friend={name: "Friend Number " + i} %>
-                    <%- include('includes/friendlist_item', friend) %>
-                <% }; %>
-            </ul>
-        </section>
-    
-        <section id="bookmarks">
-            <% for(let i=0; i < 9; i++) { %>
-                <% let style = 'grid-area: ' + (1 + 2*i) + ' / 1 / ' + (4 + 2*i) + ' / 2' %>
-                <div style="<%= style %>" id="bm<%=i%>" class="bookmark"></div>
-            <% }; %>
-        </section>
-    
-    </section>
-    
-    </main>
-
-    <%- include('./includes/aside_closed'); %>
-
-    <%- include('./includes/footer'); %>
-
-  </body>
-</html>
+</section>
