--- a/src/views/rooms.ejs
+++ b/src/views/rooms.ejs
@@ -1,10 +1,11 @@
 <section id="rooms">
 
+    <!-- pubblic rooms -->
     <article class="rooms_section" id="general">
       <h1>Chat Rooms</h1>
       <ul class="discover_lineup">
             <!-- Used place holders -->
-            <% let rooms = [{"title": "Chat 1" , "img" : "/images/chat.png" }, {"title": "Chat 2" , "img" : "/images/chat.png" },{"title": "Chat 3" , "img" : "/images/chat.png" }] %>
+            <% let rooms = [{"title": "Chat 1" , "img" : "/images/chat.png" }, {"title": "Chat 2" , "img" : "/images/chat.png" }, {"title": "Chat 3" , "img" : "/images/chat.png" }] %>
             <% rooms.forEach( item => { %>
                 <li class="discover_item grow_hover shadow"><a href="/item/info">
                     <img src="<%= item.img %>" alt="<%= item.title %>">
@@ -14,5 +15,27 @@
   
       </ul>
     </article>
+
+    <!-- private rooms -->
+    <article class="private_rooms_section" id="general">
+        <h1>Chat Rooms</h1>
+        <ul class="discover_lineup">
+              <!-- Used place holders -->
+              <% let rooms = [{"title": "Chat 1" , "img" : "/images/chat.png" }, {"title": "Chat 2" , "img" : "/images/chat.png" }, {"title": "Chat 3" , "img" : "/images/chat.png" }] %>
+              <% rooms.forEach( item => { %>
+                  <li class="discover_item grow_hover shadow"><a href="/item/info">
+                      <img src="<%= item.img %>" alt="<%= item.title %>">
+                      <h1><%= item.title %></h1>
+                  </a></li>
+              <% }) %>
+    
+        </ul>
+      </article>
+    
+    <!-- too see the invites to join privates rooms -->
+    <section class="invites">
+        <%= room.invites %>
+        <button id="accept_invite">accept invite</button>
+    <section>
   
   </section>
