--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,6 +4,7 @@
     <title>
         <%= title %>
     </title>
+    <link href="stylesheets/login_signup.css" rel="stylesheet" />
 </head>
 
 <body>
