--- a/src/views/single_room.ejs
+++ b/src/views/single_room.ejs
@@ -1,21 +1,75 @@
-<section class="room">
-    <!-- central part -->
-    <section class="chat">
-        <p id="messages"><%= room.messages%></p>
-    </section>
+<html>
 
-    <!-- below the chat messages -->
-    <section class="input">
-        <label for="msg"></label>
-		<input id="msg" type="text" name="msg" value="" placeholder="Type here your message"/>
-		<button id="send">Send</button>
-        <button id="leave_room">Leave room</button>
-    </section>
+<head>
+    <link href="stylesheets/single_room.css" rel="stylesheet" />
+    <link href="stylesheets/general.css" rel="stylesheet" />
+</head>
 
-    <!-- member list aside -->
-    <section class="members">
-        <section><%= room.owner%></section>
-        <section><%= room.admin%></section>
-        <section><%= room.members %></section>
-    </section>
-</section>  
+<body>
+
+    <div id="room_container">
+        <section class="room">
+            <!-- central part -->
+            <section id="chat">
+                <% let prev %>
+                <% messages.forEach(msg => { %>
+                    <% let info = {prev:prev, msg:msg} %>
+                    <%- include('includes/room_msg', info) %>
+                    <% if (msg.user.id != prev) { %>
+                        <% prev = msg.user.id %>
+                    <% } %>
+                <% }); %>
+            </section>
+        
+            <!-- below the chat messages -->
+            <section id="input">
+                <button id="leave_room">Leave room</button>
+                <div id="input">
+                    <label for="msg"></label>
+                    <input id="msg" type="text" name="msg" value="" placeholder="Type here your message"/>
+                    <button id="send">Send</button>
+                </div>
+            </section>
+        
+            <!-- member list aside -->
+            <section id="members">
+                <section id="admins">
+        
+                    <h2>Admins</h2>
+                    <ul class="member_list">
+                        <%- include('includes/room_member', {user:author, role:'author'}) %>
+                        <%- include('includes/room_member', {user:admins[1], role:'admin'}) %>
+                    </ul>
+        
+                    <!-- TODO: Implement this version instead -->
+                    <%- /* include('room_member', {user:room.author, role:'author'}) */ %>
+                    <% /* admins.forEach( admin => { */ %>
+                        <% /* if (!room.isAuthor(admin)) { */ %>
+                            <%- /* include('room_member', {user:admin, role:'admin'}) */ %>
+                        <% /* }; */%>
+                    <% /* }); */%>
+                </section>
+                <section id="normal_members">
+        
+                    <h2>Members</h2>
+                    <ul class="member_list">
+                        <%- include('includes/room_member', {user:users[2], role:'user'}) %>
+                        <%- include('includes/room_member', {user:users[3], role:'user'}) %>
+                        <%- include('includes/room_member', {user:users[4], role:'user'}) %>
+                    </ul>
+        
+                    <!-- TODO: Implement this version instead -->
+                    <!-- <% users.forEach( user => { %>
+                        <% /* if (!room.isAdmin(user)) { */%>
+                            <%- /* include('room_member', {user:user, role:'user'}) */ %>
+                        <% /* }; */%>
+                    <% }); %> -->
+                </section>
+            </section>
+        </section>  
+    </div>
+    
+</body>
+
+</html>
+
