--- a/src/public/stylesheets/login_signup.css
+++ b/src/public/stylesheets/login_signup.css
@@ -1,13 +1,4 @@
-body {
-    padding: 0px;
-    margin: 0px;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#form-container {
+.form-container {
     background-color: rgb(167, 165, 167);
     width: 550px;
     border-radius: 10px;
@@ -15,12 +6,12 @@ body {
     overflow: hidden;
 }
 
-#form-container * {
+.form-container * {
     font-family: sans-serif;
     color: #080710;
 }
 
-#form-container input[type=submit] {
+.form-container input[type=submit] {
     cursor: pointer;
     border-style: none;
     border-radius: 500px;
@@ -33,12 +24,12 @@ body {
     box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
 }  
 
-#form-container input[type=submit]:hover {
+.form-container input[type=submit]:hover {
     transform: scale(1.1) !important;
 }
 
 /* ===== Greet message ===== */
-#form-container > #title {
+.form-container > #title {
     /* background-color: lightgreen; */
     margin-top: 50px;
     display: flex;
@@ -47,7 +38,7 @@ body {
     justify-content: space-around;
 }
 
-#form-container > #title > h1 {
+.form-container > #title > h1 {
     letter-spacing: 0.5px;
     font-size: 45px;
     font-weight: 500;
@@ -56,7 +47,7 @@ body {
     margin-top: 15px;
 }
 
-#form-container > #title > h2 {
+.form-container > #title > h2 {
     font-size: 20px;
     font-weight: 500;
     text-align: center;
@@ -65,7 +56,7 @@ body {
 }
 
 /* ===== Form ===== */
-#form-container > form {
+.form-container > form {
     margin-top: 10px;
     margin-bottom: 40px;
     /* background-color: lightsalmon; */
@@ -74,12 +65,12 @@ body {
     align-items: center;
 }
 
-#form-container > form > label {
+.form-container > form > label {
     width: 460px;
     margin: 20px 10px;
 }
 
-#form-container > form > label > input {
+.form-container > form > label > input {
     height: 60px;
     border-radius: 5px;
     border-style: none;
@@ -88,19 +79,19 @@ body {
     box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
 }
 
-#form-container > form > label > h3 {
+.form-container > form > label > h3 {
     margin: 0px;
     margin-bottom: 10px;
     font-weight: 500;
     font-size: 20px;
 }
 
-#form-container > form > input {
+.form-container > form > input {
     margin: 20px 0px;
 }
 
 /* ===== Alternative option ===== */
-#form-container #alternative {
+.form-container #alternative {
     background-color: #f0f0f0;
     border-radius: 5px;
     display: flex;
@@ -109,41 +100,41 @@ body {
     padding: 20px 0px;
 }
 
-#form-container #alternative h3 {
+.form-container #alternative h3 {
     font-size: 20px;
     margin-bottom: 15px;
     font-weight: 500;
 }
 
-#form-container #alternative input {
+.form-container #alternative input {
     background-color: rgb(185, 247, 185);
 }
 
 /* Make signup page slightly smaller */
 
-div.signup#form-container > #title {
+div#signup.form-container > #title {
     margin-top: 40px;
 }
 
-div.signup#form-container > form > label {
+div#signup.form-container > form > label {
     margin: 0px;
     margin-bottom: 15px;
 }
 
-div.signup#form-container > form > label > input {
+div#signup.form-container > form > label > input {
     height:40px;
     font-size: 16px;
 }
 
-div.signup#form-container > form > label > h3 {
+div#signup.form-container > form > label > h3 {
     margin: 0px;
     margin-bottom: 5px;
 }
 
-div.signup#form-container > form > input {
+div#signup.form-container > form > input {
     margin: 20px 0px 0px 0px;
 }
 
-div.signup#form-container #alternative {
+div#signup.form-container #alternative {
     padding: 10px;
 }
