--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -10,4 +10,5 @@
     <link rel='stylesheet' href='/stylesheets/friendlist.css' />
     <link rel='stylesheet' href='/stylesheets/footer.css' />
     <link rel='stylesheet' href='/stylesheets/aside.css' />
+    <link rel='stylesheet' href='/stylesheets/login_signup.css'  />
 </head>
