--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,64 +1,49 @@
-<html>
+<div class="form-container" id="signup">
 
-<head>
-    <title>
-        <%= title %>
-    </title>
-    <link href="stylesheets/login_signup.css" rel="stylesheet" />
-</head>
+    <section id="title">
+        <h1>Sign up</h1>
+        <h2>Create a new account to continue to S.A.N.D</h2>
+    </section>
 
-<body>
+    <form method="POST" action="/signup" id="signupForm" enctype="multipart/form-data">
+        <label for="username">
+            <h3>Username</h3>
+            <input type="text" name="username" required>
+        </label>
 
-    <div id="form-container" class="signup">
+        <label for="name">
+            <h3>Name</h3>
+            <input type="text" name="name" required>
+        </label>
 
-        <section id="title">
-            <h1>Sign up</h1>
-            <h2>Create a new account to continue to S.A.N.D</h2>
-        </section>
+        <label for="surname">
+            <h3>Surname</h3>
+            <input type="text" name="surname" required>
+        </label>
 
-        <form method="POST" action="/signup" enctype="multipart/form-data">
-            <label for="username">
-                <h3>Username</h3>
-                <input type="text" name="username" required>
-            </label>
+        <label for="email">
+            <h3>Email</h3>
+            <input type="email" name="email" required>
+        </label>
 
-            <label for="name">
-                <h3>Name</h3>
-                <input type="text" name="name" required>
-            </label>
+        <label for="password">
+            <h3>Password</h3>
+            <input type="password" name="password" required>
+        </label>
 
-            <label for="surname">
-                <h3>Surname</h3>
-                <input type="text" name="surname" required>
-            </label>
+        <label for="retype_password">
+            <h3>Retype Password</h3>
+            <input type="password" name="retype_password" required>
+        </label>
 
-            <label for="email">
-                <h3>Email</h3>
-                <input type="email" name="email" required>
-            </label>
+        <input class="grow_hover" type="submit" value="Sign up">
+    </form>
 
-            <label for="password">
-                <h3>Password</h3>
-                <input type="password" name="password" required>
-            </label>
-
-            <label for="retype_password">
-                <h3>Retype Password</h3>
-                <input type="password" name="retype_password" required>
-            </label>
-
-            <input class="grow_hover" type="submit" value="Sign up">
+    <section id="alternative">
+        <h3>Already have an account?</h3>
+        <form method="GET" id="loginRedirect" action="/login">
+            <input class="grow_hover" type="submit" value="Login">
         </form>
+    </section>
 
-        <section id="alternative">
-            <h3>Already have an account?</h3>
-            <form method="GET" action="/login">
-                <input class="grow_hover" type="submit" value="Login">
-            </form>
-        </section>
-
-    </div>
-
-</body>
-
-</html>
+</div>
