--- a/src/public/stylesheets/general.css
+++ b/src/public/stylesheets/general.css
@@ -6,7 +6,7 @@
 * {
     margin: 0px;
     padding: 0px;
-    color: black !important;
+    color: rgb(39, 39, 39);
     box-sizing: border-box;
 }
 
