Styled input area and refined entire look of room

--- a/src/public/stylesheets/general.css
+++ b/src/public/stylesheets/general.css
@@ -45,6 +45,7 @@ body {
 /* Page Layout */
 
 body {
+    background-color: #f0f0f0;
     display: grid;
     grid-template-columns: auto 1fr 185px;
     grid-template-rows: 75px 1fr 70px;
