--- a/src/views/single_room.ejs
+++ b/src/views/single_room.ejs
@@ -10,6 +10,7 @@
     <div id="room_container">
         <section class="room">
             <!-- central part -->
+            <div id="chat_shadow"></div>
             <section id="chat">
                 <% let prev %>
                 <% messages.forEach(msg => { %>
@@ -23,11 +24,12 @@
         
             <!-- below the chat messages -->
             <section id="input">
-                <button id="leave_room">Leave room</button>
+                <button class="grow_hover" id="leave_room">Leave room</button>
                 <div id="input">
-                    <label for="msg"></label>
-                    <input id="msg" type="text" name="msg" value="" placeholder="Type here your message"/>
-                    <button id="send">Send</button>
+                    <label for="msg">
+                        <input id="msg" type="text" name="msg" value="" placeholder="Type here your message"/>
+                    </label>
+                    <button class="grow_hover" id="send">Send</button>
                 </div>
             </section>
         
