--- a/src/views/settings.ejs
+++ b/src/views/settings.ejs
@@ -1,40 +1,72 @@
 <html>
-    <body>
 
-        <form method="POST" action="user/settings/<%= result._id %>?req=password" enctype="multipart/form-data">
+<head>
+    <link href="stylesheets/settings.css" rel="stylesheet" />
+    <link href="stylesheets/general.css" rel="stylesheet" />
+</head>
 
-            <label for="old_password">Old password:</label>
-            <input type="text" name="old_password" required>
+<body>
 
-            <label for="new_password">New password:</label>
-            <input type="password" name="new_password" required>
+    <div id="settings_container">
 
-            <label for="confirm_new_password">Confirm new password:</label>
-            <input type="password" name="confirm_new_password" required>
-            
-            <input type="submit" value="Change password">
-        </form>
+        <div id="settings">
 
-        <form method="POST" action="user/settings/<%= result._id %>?req=settings" enctype="multipart/form-data">
-            <label for="email">Change email:</label>
-            <input type="text" name="email" required>
+            <h1>Edit Your Profile</h1>
 
-            <input type="submit" value="Change email">
-        </form>
+            <section id="profile_picture">
+                <img id="picture" src="images/user1.png" alt="profile">
+                <form method="POST" action="user/settings/<%= result._id %>?req=ppic" enctype="multipart/form-data">
+                    <label for="upload">Choose an image to upload:</label>
+                    <input  type="file" id="file" name="profile_picture" accept="image/*">
+                    <button type="button" id="regenerate_image" name="regenerate_image"> Regenerate Image </button>
+                    <input class="button" type="submit" value="Change profile picture">
+                </form>
+            </section>
 
-        <form method="POST" action="user/settings/<%= result._id %>?req=bio" enctype="multipart/form-data">
-            <label for="bio">Change bio:</label>
-            <input type="text" name="bio">
+            <section id="user_info">
+                <form method="POST" action="user/settings/<%= result._id %>?req=settings" enctype="multipart/form-data">
+                    <label for="email">Change email:</label>
+                    <input type="text" name="email" required>
+        
+                    <input class="button" type="submit" value="Change email">
+                </form>
+        
+                <form method="POST" action="user/settings/<%= result._id %>?req=bio" enctype="multipart/form-data">
+                    <label for="bio">Change bio:</label>
+                    <input type="text" name="bio">
+        
+                    <input class="button" type="submit" value="Change bio">
+                </form>
+            </section>
 
-            <input type="submit" value="Change bio">
-        </form>
+            <section id="password">
 
-        <form method="POST" action="user/settings/<%= result._id %>?req=ppic" enctype="multipart/form-data">
-            <label for="upload">Choose an image to upload:</label>
-            <input type="file" id="file" name="profile_picture" accept="image/*">
-            <button type = "button" id="regenerate_image" name="regenerate_image"> Regenerate Image </button>
-            <input type="submit" value="Change profile picture">
-        </form>
+                <h2>Modify your password</h1>
+                <form method="POST" action="user/settings/<%= result._id %>?req=password" enctype="multipart/form-data">
+
+                    <label for="old_password">
+                        <h3>Old Password</h3>
+                        <input type="text" name="old_password" required>
+                    </label>
+        
+                    <label for="new_password">
+                        <h3>New Password</h3>
+                        <input type="password" name="new_password" required>
+                    </label>
+        
+                    <label for="confirm_new_password">
+                        <h3>Confirm New Password</h3>
+                        <input type="password" name="confirm_new_password" required>
+                    </label>
+                    
+                    <input class="button" type="submit" value="Change password">
+                </form>
+
+            </section>
+        </div>
+
+    </div>
     
-    </body>
+</body>
+
 </html>
