Implemented the single page collection with necessary methods$

--- a/src/views/discover.ejs
+++ b/src/views/discover.ejs
@@ -9,7 +9,7 @@
 
         <!-- <% let collection = [{"title": "Animal Pattern" , "img" : "/images/animal_pattern.jpg" }, {"title": "Abstract Art" , "img" : "/images/abstract_art.jpg" },{"title": "Dark" , "img" : "/images/dark_art.jpg" }] %> -->
         <% data.forEach( item => { %>
-          <li class="discover_item grow_hover shadow"><a href="/item/info">
+          <li class="discover_item grow_hover shadow"><a href="<%= item.link %>">
               <img src="<%= item.img %>" alt="<%= item.title %>">
               <h1><%= item.title %></h1>
           </a></li>
