--- a/src/views/single_collection.ejs
+++ b/src/views/single_collection.ejs
@@ -10,6 +10,6 @@
         <p> Items: <b><%= data.num_assets %></b> </p>
         <p> Owners: <b><%= data.num_owners %></b> </p>
         <p> Total volume: <b><%= data.total_volume %></b> </p>
-        <p> Link to OpenSea: <a href="<%= data.num_assets %>"> <%= data.title %> </a> </p>
+        <p> Link to OpenSea: <a href="https://opensea.io/collection/<%= data.slug %>"> <%= data.title %> </a> </p>
     </section>
 </section>  
