--- a/src/public/stylesheets/settings.css
+++ b/src/public/stylesheets/settings.css
@@ -38,8 +38,8 @@ section#user_info {
     background-color: skyblue;
 }
 
-/* Password Area */
-section#password {
+/* Setting Section General Structure */
+section.settings_section {
     background-color: thistle;
     display: flex;
     flex-direction: column;
@@ -48,17 +48,23 @@ section#password {
     padding: 40px 0px;
 }
 
-section#password h2 {
+section.settings_section > div {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+section.settings_section h2 {
     letter-spacing: 0.5px;
     font-weight: normal;
     font-size: 28px;
 }
 
-section#password h3 {
+section.settings_section h3 {
     font-weight: normal;
 }
 
-section#password form {
+section.settings_section form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,12 +72,17 @@ section#password form {
     width: fit-content;
 }
 
-section#password form > * {
+section.settings_section form > * {
     display: flex;
     flex-direction: column;
 }
 
-section#password form > label > input {
+section.settings_section#user_info form > label > input:last-child {
+    margin-top: 10px;
+    align-self: flex-end;
+}
+
+section.settings_section form > label > input {
     height: 40px;
     width: 350px;
     margin-top: 5px;
