--- a/src/public/stylesheets/settings.css
+++ b/src/public/stylesheets/settings.css
@@ -1,10 +1,11 @@
 #settings_container {
     background-color: #87878a;
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
+    height: fit-content !important;
     display: flex;
     justify-content: center;
-    align-items: center;
+    grid-column: 1/-1;
+    grid-row: 1/-1;
 }
 
 div#settings {
@@ -13,6 +14,18 @@ div#settings {
     width: 100%;
     min-width: 700px;
     max-width: 1400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+}
+
+div#settings > section {
+    width: 100%;
+}
+
+div#settings > h1 {
+    margin-top: 50px;
 }
 
 div#settings input {
@@ -22,25 +35,33 @@ div#settings input {
 
 /* Profile Picture Area */
 section#profile_picture {
-    background-color: sandybrown;
+    flex-direction: row !important;
+    justify-content: center;
+    gap: 100px;
+}
+
+section#profile_picture > #picture {
+    max-width: 250px;
+    background-color: white;
+    border-radius: 500px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
+}
+
+section#profile_picture label {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-section#profile_picture > #picture {
-    max-width: 200px;
-    background-color: red;
-}
-
-/* User Info Area */
-section#user_info {
-    background-color: skyblue;
+section#profile_picture > form > div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    min-width: 600px;
 }
 
 /* Setting Section General Structure */
 section.settings_section {
-    background-color: thistle;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,7 +89,7 @@ section.settings_section form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 30px;
     width: fit-content;
 }
 
@@ -91,7 +112,7 @@ section.settings_section form > label > input {
 
 /* Makes input elements look like buttons */
 div#settings .button {
-    background-color: #f0f0f0;
+    background-color: white;
     border-style: none;
     font-weight: bolder;
     min-width: 80px;
@@ -101,6 +122,10 @@ div#settings .button {
     height: 35px;
     box-shadow: rgba(0, 0, 0, 0.03) 0px 5px 10px, rgba(0, 0, 0, 0.03) 0px 6px 6px;
     transition: all .1s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
 }
 
 div#settings .button:hover {
